--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "2.1.3",
+    "@types/lodash": "^4.14.116",
+    "@types/mathjs": "^4.4.1",
+    "@types/text-encoding": "0.0.33",
     "ionic-angular": "3.9.2",
     "ionicons": "4.3.0",
+    "lodash": "^4.17.10",
+    "mathjs": "^5.0.4",
     "rxjs": "6.2.2",
     "rxjs-compat": "^6.2.2",
     "sw-toolbox": "3.6.0",
+    "text-encoding": "^0.6.4",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
